# walker

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  configure.ac.old  walker
.deps/: main.Po  walker-character.Po  walker-gui.Po  walker-main.Po  walker-player.Po
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
src/: character.cpp  character.hpp  gui.cpp  gui.hpp  main.cpp  player.cpp  player.hpp  walker.hpp
