#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(Walker, 0.1, cdr255@gmail.com)
AC_CONFIG_SRCDIR([src/main.cpp])
AM_INIT_AUTOMAKE
# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
PKG_CHECK_MODULES(SFML, sfml-all)
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
